# gdrive-backup

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  run.sh
